fix fold bottom be hidden if .Markplus{overflow:hidden;}.

--- a/src/plugin/style-default.css
+++ b/src/plugin/style-default.css
@@ -1,6 +1,6 @@
 .Markplus {
     font-family: arial,tahoma,'Microsoft Yahei','\5b8b\4f53',sans-serif;
-    margin: 45px;
+    padding: 45px;
     line-height: 1.5;
 }
 .Markplus .Target {
